--- a/localisation/japanese/TI_victory_points_l_japanese.yml
+++ b/localisation/japanese/TI_victory_points_l_japanese.yml
@@ -1,4 +1,5 @@
-﻿ VICTORY_POINTS_53: "スタヴァンゲル"
+﻿l_japanese:
+ VICTORY_POINTS_53: "スタヴァンゲル"
  VICTORY_POINTS_117: "ノヴゴロド"
  VICTORY_POINTS_121: "ヤロスラヴリ"
  VICTORY_POINTS_122: "ベルゲン"
