今日はこの辺にしといたる

--- a/localisation/japanese/TI_countries_l_japanese.yml
+++ b/localisation/japanese/TI_countries_l_japanese.yml
@@ -52,9 +52,9 @@
  GRE: "ギリシア王国"
  GRE_DEF: "ギリシア王国"
  GRE_ADJ: "ギリシア"
- HUN: "ギリシア王国"
- HUN_DEF: "ギリシア王国"
- HUN_ADJ: "ギリシア"
+ HUN: "ハンガリー王国"
+ HUN_DEF: "ハンガリー王国"
+ HUN_ADJ: "ハンガリー"
  LRU: "ウクライナ人民共和国"
  LRU_DEF: "ウクライナ人民共和国"
  LRU_ADJ: "ウクライナ"
